@startuml erd_diagram

entity "Quiz" {
  * quizId : int
  * title : String
  * createdAt : Date
  * userId : UUID // Foreign key to User
  * endAt : Date
}

entity "Question" {
  * questionId : UUID
  * text : String
  * order : Integer
  * quizId : int // Foreign key to Quiz
  * maxPoint : Integer
  * type : String //SINGLE_CHOICE, MULTIPLE_CHOICE
}

entity "QuestionOption" {
  * id : UUID
  * text : String
  * isCorrect : Boolean
  * questionId : UUID // Foreign key to Question
}

entity "PlayerAnswer" {
  * playerAnswerId : UUID
  * questionId : UUID // Foreign key to Question
  * userId : UUID // Foreign key to User
  * selectedOptions : List<UUID> // List of selected QuestionOption
  * isCorrect : Boolean
  * point : Integer
}

entity "User" {
  * userId : UUID
  * name : String
  * email : String
}

' Relationships
Quiz ||--o{ Question : "contains"
Question ||--o{ QuestionOption : "has options"
Question ||--o{ PlayerAnswer : "answered by"
User ||--o{ PlayerAnswer : "submits"
User ||--o{ Quiz : "creates"

@enduml
